--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,6 +38,9 @@ header {
   display: flex;
   justify-content: center; 
   align-content: center;
+
+  position: sticky;
+  top: 0;
 }
 
 header ul {
