--- a/estilos/style.css
+++ b/estilos/style.css
@@ -244,6 +244,10 @@ article h2 {
   color: var(--destaque-inverso);
 }
 
+img#foto-barbearia {
+  object-position: center top;
+}
+
 footer {
   background-color: var(--destaque);
   color: var(--texto-inverso);
